rebase webapp integration branch

--- a/app/eventyay/control/templates/pretixcontrol/admin/base.html
+++ b/app/eventyay/control/templates/pretixcontrol/admin/base.html
@@ -2,6 +2,7 @@
 {% load i18n static %}
 {% block custom_header %}
     {{ block.super }}
+    <link rel="stylesheet" href="{% static 'global/video_admin.css' %}">
 {% endblock %}
 {% block content %}
 <div class="video-admin-wrapper">
