--- a/app/eventyay/eventyay_common/templates/eventyay_common/organizers/index.html
+++ b/app/eventyay/eventyay_common/templates/eventyay_common/organizers/index.html
@@ -61,7 +61,7 @@
                             class="btn btn-sm btn-default"
                             data-toggle="tooltip">Ticket Teams
                     </a>
-                    <a href='/orga/organizer/{{ organizer.slug }}/teams/'
+                    <a href='/talk/orga/organiser/{{ organizer.slug }}/teams/'
                             class="btn btn-sm btn-default"
                             data-toggle="tooltip">Talk Teams
                     </a>
