--- a/app/eventyay/eventyay_common/templates/eventyay_common/event/fragment_dashboard.html
+++ b/app/eventyay/eventyay_common/templates/eventyay_common/event/fragment_dashboard.html
@@ -59,15 +59,10 @@
             <p>
                 {% trans "Setup and configure live video streams, online workshops with live-audio interpretation and chats. Offer virtual exhibitor booths with rich content and social media integration." %}
             </p>
-            {% if is_video_enabled %}
-                <p>
-                    {% trans "Go to" %} <a href="{% url 'eventyay_common:event.create_access_to_video' organizer=request.organizer.slug event=request.event.slug %}" target="_blank" rel="noopener noreferrer">{% trans "Video Configuration" %}</a>
-                </p>
-            {% else %}
-                <p>
-                    {% trans "Go to" %} <a href="#" data-toggle="modal" data-target="#alert-modal">{% trans "Video Configuration" %}</a>
-                </p>
-            {% endif %}
+            <p>
+                {% trans "Go to" %}
+                <a href="{% url 'eventyay_common:event.create_access_to_video' organizer=request.organizer.slug event=request.event.slug %}" target="_blank" rel="noopener noreferrer">{% trans "Video Configuration" %}</a>
+            </p>
         </div>
     </div>
 
