--- a/app/eventyay/static/pretixcontrol/scss/auth.scss
+++ b/app/eventyay/static/pretixcontrol/scss/auth.scss
@@ -17,8 +17,7 @@ footer {
     width: 200px;
     margin: auto;
     display: block;
-    margin-top: 7.5%;
-	margin-bottom: 30px;
+    margin-top: 1.5vh;
     height: auto;
     max-width: 100%;
 }
@@ -28,10 +27,9 @@ footer {
 	background: white;
 	box-shadow: 0 7px 14px 0 rgba(78, 50, 92, 0.1),0 3px 6px 0 rgba(0,0,0,.07);
 	border: 1px solid white;
-
-	max-width: 380px;
+	max-width: 420px;
 	margin: auto;
-	margin-top: 2.5%;
+	margin-top: 1.5vh;
 	padding-bottom: 0;
 
 	.control-label {
