--- a/app/eventyay/eventyay_common/templates/eventyay_common/events/index.html
+++ b/app/eventyay/eventyay_common/templates/eventyay_common/events/index.html
@@ -30,6 +30,9 @@
                             {% bootstrap_field filter_form.query layout='inline' %}
                         </div>
                         <div class="col-md-3 col-sm-6 col-xs-12">
+                            {% bootstrap_field filter_form.status layout='inline' %}
+                        </div>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
                             {% bootstrap_field filter_form.organizer layout='inline' %}
                         </div>
                     </div>
