--- a/app/eventyay/eventyay_common/templates/eventyay_common/events/index.html
+++ b/app/eventyay/eventyay_common/templates/eventyay_common/events/index.html
@@ -35,12 +35,18 @@
                         <div class="col-md-3 col-sm-6 col-xs-12">
                             {% bootstrap_field filter_form.organizer layout='inline' %}
                         </div>
-                    </div>
-                    <div class="text-right">
-                        <button class="btn btn-primary" type="submit">
-                            <span class="fa fa-filter"></span>
-                            <span class="hidden-md">{% trans "Filter" %}</span>
-                        </button>
+                        <div class="col-md-3 col-sm-6 col-xs-12">
+                            <div class="form-group" style="gap: 20px; display: flex;">
+                                <button class="btn btn-primary" type="submit">
+                                    <span class="fa fa-filter"></span>
+                                    <span class="hidden-md">{% trans "Filter" %}</span>
+                                </button>
+                                <a href="?" class="btn btn-default">
+                                    <span class="fa fa-eraser"></span>
+                                    <span class="hidden-md">{% trans "Clear filters" %}</span>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </form>
             </div>
