unify teams for enext

--- a/app/eventyay/eventyay_common/templates/eventyay_common/base.html
+++ b/app/eventyay/eventyay_common/templates/eventyay_common/base.html
@@ -62,6 +62,7 @@
             <script type="text/javascript" src="{% static "are-you-sure/jquery.are-you-sure.js" %}"></script>
             <script type="text/javascript" src="{% static "eventyay-common/js/ui/popover.js" %}"></script>
             <script type="text/javascript" src="{% static "utils/js/utils.js" %}"></script>
+            <script type="text/javascript" src="{% static "eventyay-common/js/ui/team.js" %}"></script>
 		{% endcompress %}
         {{ html_head|safe }}
 
