--- a/app/eventyay/eventyay_common/templates/eventyay_common/organizers/index.html
+++ b/app/eventyay/eventyay_common/templates/eventyay_common/organizers/index.html
@@ -57,7 +57,7 @@
                             data-toggle="tooltip">
                         <span class="fa fa-edit"></span>
                     </a>
-                    <a href='{% url "eventyay_common:organizer.teams" organizer=organizer.slug  %}'
+                    <a href='{% url "control:organizer.teams" organizer=organizer.slug  %}'
                             class="btn btn-sm btn-default"
                             data-toggle="tooltip">Ticket Teams
                     </a>
