--- a/app/eventyay/plugins/sendmail/templates/pretixplugins/sendmail/history.html
+++ b/app/eventyay/plugins/sendmail/templates/pretixplugins/sendmail/history.html
@@ -1,12 +1,18 @@
 {% extends "pretixcontrol/event/base.html" %}
 {% load i18n %}
 {% load bootstrap3 %}
-{% block title %}{% trans "Send out emails" %}{% endblock %}
+{% block title %}{% trans "Mails" %}{% endblock %}
 {% block content %}
     <nav id="event-nav" class="header-nav">
         <div class="navigation">
             <div class="navigation-title">
-                <h1>{% trans "Email history" %}</h1>
+                <h1>
+                    {% blocktranslate count log_count=logs|length %}
+                        Sent emails
+                    {% plural %}
+                        {{ log_count }} Sent emails
+                    {% endblocktranslate %}
+                </h1>
             </div>
             {% include "pretixcontrol/event/component_link.html" %}
         </div>
