--- a/app/eventyay/control/templates/pretixcontrol/event/settings.html
+++ b/app/eventyay/control/templates/pretixcontrol/event/settings.html
@@ -21,22 +21,14 @@
     <form action="" method="post" class="form-horizontal" enctype="multipart/form-data">
         {% csrf_token %}
         {% bootstrap_form_errors form %}
+		{% bootstrap_form_errors sform %}
         <div class="tabbed-form">
             <fieldset>
                 <legend>{% trans "Basics" %}</legend>
-                {% bootstrap_field form.name layout="control" %}
-                {% bootstrap_field form.slug layout="control" %}
                 {% if form.domain %}
                     {% bootstrap_field form.domain layout="control" %}
                 {% endif %}
-                {% bootstrap_field form.date_from layout="control" %}
-                {% bootstrap_field form.date_to layout="control" %}
-                {% include "pretixcontrol/event/fragment_geodata.html" %}
-                {% bootstrap_field form.date_admission layout="control" %}
                 {% bootstrap_field form.currency layout="control" %}
-                {% bootstrap_field sform.contact_mail layout="control" %}
-                {% bootstrap_field sform.imprint_url layout="control" %}
-                {% bootstrap_field form.is_public layout="control" %}
                 {% bootstrap_field form.sales_channels layout="control" %}
 
                 {% if meta_forms %}
@@ -58,13 +50,6 @@
                         </div>
                     </div>
                 {% endif %}
-            </fieldset>
-            <fieldset>
-                <legend>{% trans "Localization" %}</legend>
-                {% bootstrap_field sform.locales layout="control" %}
-                {% bootstrap_field sform.locale layout="control" %}
-                {% bootstrap_field sform.timezone layout="control" %}
-                {% bootstrap_field sform.region layout="control" %}
             </fieldset>
             <fieldset>
                 <legend>{% trans "Customer and attendee data" %}</legend>
