fix working of some views

--- a/app/eventyay/control/templates/pretixcontrol/admin/pages/form.html
+++ b/app/eventyay/control/templates/pretixcontrol/admin/pages/form.html
@@ -78,7 +78,7 @@
                         </div>
                     </fieldset>
                     <div class="form-group submit-group">
-                        <a href="{% url 'control:admin.pages' %}" class="btn btn-default btn-lg pull-left flip">
+                        <a href="{% url 'eventyay_admin:admin.pages' %}" class="btn btn-default btn-lg pull-left flip">
                             {% trans "Back" %}
                         </a>
                         <button type="submit" class="btn btn-primary btn-save">
