--- a/app/eventyay/control/templates/pretixcontrol/admin/pages/delete.html
+++ b/app/eventyay/control/templates/pretixcontrol/admin/pages/delete.html
@@ -10,7 +10,7 @@
             Are you sure you want to delete the page <strong>{{ name }}</strong>?
         {% endblocktrans %}</p>
 		<div class="form-group submit-group">
-            <a href="{% url "control:admin.pages" %}" class="btn btn-default btn-cancel">
+            <a href="{% url "eventyay_admin:admin.pages" %}" class="btn btn-default btn-cancel">
                 {% trans "Cancel" %}
             </a>
             <button type="submit" class="btn btn-danger btn-save">
