implement one ticket per user

--- a/app/eventyay/control/templates/pretixcontrol/item/index.html
+++ b/app/eventyay/control/templates/pretixcontrol/item/index.html
@@ -98,6 +98,7 @@
                         {% bootstrap_field form.available_until layout="control" %}
                         {% bootstrap_field form.max_per_order layout="control" %}
                         {% bootstrap_field form.min_per_order layout="control" %}
+                        {% bootstrap_field form.limit_one_per_user layout="control" %}
                         {% bootstrap_field form.require_voucher layout="control" %}
                         {% bootstrap_field form.hide_without_voucher layout="control" %}
                         {% bootstrap_field form.require_bundling layout="control" %}
