Fix missing ticket link field (#377)
* Ignore Zed editor settings folder

* Restore ticket_link, video_link fields

--- a/app/eventyay/orga/templates/orga/settings/form.html
+++ b/app/eventyay/orga/templates/orga/settings/form.html
@@ -80,6 +80,8 @@
                 {{ form.use_feedback.as_field_group }}
                 {{ form.export_html_on_release.as_field_group }}
                 {{ form.html_export_url.as_field_group }}
+				{{ form.ticket_link.as_field_group }}
+                {{ form.video_link.as_field_group }}
             </fieldset>
             <fieldset>
                 <legend id="other-settings">{% translate "Other settings" %}</legend>
