fixed error 500 due to no existing api

--- a/app/eventyay/control/templates/pretixcontrol/items/description_edit.html
+++ b/app/eventyay/control/templates/pretixcontrol/items/description_edit.html
@@ -33,7 +33,7 @@
                 <div class="hidden">
                     {% bootstrap_field form.type layout="control" %}
                 </div>
-                {% bootstrap_field form.items layout="control" %}
+                {% bootstrap_field form.products layout="control" %}
             </fieldset>
         </div>
         <div class="form-group submit-group">
