--- a/app/eventyay/control/templates/pretixcontrol/items/question_edit.html
+++ b/app/eventyay/control/templates/pretixcontrol/items/question_edit.html
@@ -31,7 +31,7 @@
                 <legend>{% trans "General" %}</legend>
                 {% bootstrap_field form.question layout="control" %}
                 {% bootstrap_field form.type layout="control" %}
-                {% bootstrap_field form.items layout="control" %}
+                {% bootstrap_field form.products layout="control" %}
                 {% bootstrap_field form.required layout="control" %}
                 <div class="alert alert-info alert-required-boolean">
                     {% blocktrans trimmed %}
