--- a/app/eventyay/control/templates/pretixcontrol/checkin/list_edit.html
+++ b/app/eventyay/control/templates/pretixcontrol/checkin/list_edit.html
@@ -25,9 +25,9 @@
     </nav>
     <form action="" method="post" class="form-horizontal">
         <script type="text/plain"
-                id="product-select2">{% url "control:event.items.select2" event=request.event.slug organizer=request.organizer.slug %}</script>
+                id="product-select2">{% url "control:event.products.select2" event=request.event.slug organizer=request.organizer.slug %}</script>
         <script type="text/plain"
-                id="variations-select2">{% url "control:event.items.variations.select2" event=request.event.slug organizer=request.organizer.slug %}</script>
+                id="variations-select2">{% url "control:event.products.variations.select2" event=request.event.slug organizer=request.organizer.slug %}</script>
         {% csrf_token %}
         {% bootstrap_form_errors form %}
         <div class="tabbed-form">
