--- a/app/eventyay/control/templates/pretixcontrol/items/description_delete.html
+++ b/app/eventyay/control/templates/pretixcontrol/items/description_delete.html
@@ -14,7 +14,7 @@
 			{% endfor %}
 		{% endif %}
 		<div class="form-group submit-group">
-            <a href="{% url "control:event.items.questions" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default btn-cancel">
+            <a href="{% url "control:event.products.questions" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default btn-cancel">
                 {% trans "Cancel" %}
             </a>
             <button type="submit" class="btn btn-delete btn-danger btn-save">
