--- a/app/eventyay/control/templates/pretixcontrol/items/question.html
+++ b/app/eventyay/control/templates/pretixcontrol/items/question.html
@@ -7,7 +7,7 @@
 {% block inside %}
     <h1>
         {% blocktrans with name=question.question %}Question: {{ name }}{% endblocktrans %}
-        <a href="{% url "control:event.items.questions.edit" event=request.event.slug organizer=request.event.organizer.slug question=question.pk %}"
+        <a href="{% url "control:event.products.questions.edit" event=request.event.slug organizer=request.event.organizer.slug question=question.pk %}"
                 class="btn btn-default">
             <span class="fa fa-edit"></span>
             {% trans "Edit question" %}
@@ -51,7 +51,7 @@
                         {% trans "You need to assign the question to a product to collect answers." %}
                     </p>
 
-                    <a href="{% url "control:event.items.questions.edit" event=request.event.slug organizer=request.event.organizer.slug question=question.pk %}"
+                    <a href="{% url "control:event.products.questions.edit" event=request.event.slug organizer=request.event.organizer.slug question=question.pk %}"
                             class="btn btn-primary btn-lg"><i class="fa fa-edit"></i> {% trans "Edit question" %}</a>
                 {% endif %}
             </div>
