--- a/app/eventyay/control/templates/pretixcontrol/items/quota_delete.html
+++ b/app/eventyay/control/templates/pretixcontrol/items/quota_delete.html
@@ -33,7 +33,7 @@
             </div>
         {% endif %}
 		<div class="form-group submit-group">
-            <a href="{% url "control:event.items.quotas" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default btn-cancel">
+            <a href="{% url "control:event.products.quotas" organizer=request.event.organizer.slug event=request.event.slug %}" class="btn btn-default btn-cancel">
                 {% trans "Cancel" %}
             </a>
             <button type="submit" class="btn btn-delete btn-danger btn-save">
