implement feature clear option

--- a/app/eventyay/control/templates/pretixcontrol/admin/submissions/index.html
+++ b/app/eventyay/control/templates/pretixcontrol/admin/submissions/index.html
@@ -40,13 +40,15 @@
                 <div class="col-md-3 col-sm-6 col-xs-12">
                     {% bootstrap_field filter_form.proposal_state layout='inline' %}
                 </div>
-                <div class="col-xs-12 text-right" style="margin-top:10px;">
-                    <button class="btn btn-primary" type="submit">
-                        <span class="fa fa-filter"></span>
-                        <span class="hidden-md">
-                            {% translate "Filter" %}
-                        </span>
-                    </button>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="form-group" style="gap: 20px; display: flex;">
+                        <button class="btn btn-primary" type="submit">
+                            <span class="fa fa-filter"></span>
+                        </button>
+                        <a href="?" class="btn btn-default">
+                            <span class="fa fa-eraser"></span>
+                        </a>
+                    </div>
                 </div>
             </form>
         </div>
