--- a/app/eventyay/control/templates/pretixcontrol/admin/task_management/task_management.html
+++ b/app/eventyay/control/templates/pretixcontrol/admin/task_management/task_management.html
@@ -27,11 +27,15 @@
                         </div>
                     {% endfor %}
                 </div>
-                <div class="text-right">
-                    <button class="btn btn-primary" type="submit">
-                        <span class="fa fa-filter"></span>
-                        <span class="hidden-md">{% trans "Filter" %}</span>
-                    </button>
+                <div class="col-md-3 col-sm-6 col-xs-12">
+                    <div class="form-group" style="gap: 20px; display: flex;">
+                        <button class="btn btn-primary" type="submit">
+                            <span class="fa fa-filter"></span>
+                        </button>
+                        <a href="?" class="btn btn-default">
+                            <span class="fa fa-eraser"></span>
+                        </a>
+                    </div>
                 </div>
             </form>
         </div>
