--- a/app/eventyay/control/templates/pretixcontrol/orders/index.html
+++ b/app/eventyay/control/templates/pretixcontrol/orders/index.html
@@ -81,15 +81,18 @@
                     <div class="col-md-2 col-xs-6">
                         {% bootstrap_field filter_form.query layout='inline' %}
                     </div>
-                    <div class="col-md-1 col-xs-6">
-                        <button class="btn btn-primary btn-block" type="submit">
-                            <span class="fa fa-filter"></span>
-                        </button>
-                    </div>
-                    <div class="col-md-1 col-xs-6">
-                        <a href="{% url "control:event.orders.search" event=request.event.slug organizer=request.event.organizer.slug %}" class="btn btn-default btn-block" type="submit" data-toggle="tooltip" title="{% trans "Advanced search" %}">
-                            <span class="fa fa-cog"></span>
-                        </a>
+                    <div class="col-md-2 col-xs-12">
+                        <div class="form-group" style="gap: 20px; display: flex;">
+                            <button class="btn btn-primary" type="submit">
+                                <span class="fa fa-filter"></span>
+                            </button>
+                            <a href="?" class="btn btn-default">
+                                <span class="fa fa-eraser"></span>
+                            </a>
+                            <a href="{% url "control:event.orders.search" event=request.event.slug organizer=request.event.organizer.slug %}" class="btn btn-default" data-toggle="tooltip" title="{% trans "Advanced search" %}">
+                                <span class="fa fa-cog"></span>
+                            </a>
+                        </div>
                     </div>
                 </form>
             </div>
