--- a/app/eventyay/control/templates/pretixcontrol/subevents/index.html
+++ b/app/eventyay/control/templates/pretixcontrol/subevents/index.html
@@ -38,12 +38,14 @@
                 {% bootstrap_field filter_form.weekday layout='inline' %}
             </div>
             <div class="col-md-2 col-sm-6 col-xs-12">
-                <button class="btn btn-primary btn-block" type="submit">
-                    <span class="fa fa-filter"></span>
-                    <span class="hidden-md">
-                    {% trans "Filter" %}
-                </span>
-                </button>
+                <div class="form-group" style="gap: 20px; display: flex;">
+                    <button class="btn btn-primary" type="submit">
+                        <span class="fa fa-filter"></span>
+                    </button>
+                    <a href="?" class="btn btn-default">
+                        <span class="fa fa-eraser"></span>
+                    </a>
+                </div>
             </div>
         </form>
         {% if "can_change_event_settings" in request.eventpermset %}
